converter "venda" de object para Integer

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 46465 entries, 1 to 46471\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 12 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
       " 0   prim_col          4831 non-null   float64\n",
@@ -150,8 +150,10 @@
       " 7   Operação          46463 non-null  object \n",
       " 8   venda             46465 non-null  object \n",
       " 9   Vendedor          4830 non-null   object \n",
-      "dtypes: float64(1), object(9)\n",
-      "memory usage: 3.9+ MB\n"
+      " 10  data_venda        46465 non-null  object \n",
+      " 11  data_recebimento  46465 non-null  object \n",
+      "dtypes: float64(1), object(11)\n",
+      "memory usage: 4.6+ MB\n"
      ]
     }
    ],
@@ -371,9 +373,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prim_col</th>\n",
+       "      <th>NFe</th>\n",
+       "      <th>NFCe</th>\n",
+       "      <th>Data Venda</th>\n",
+       "      <th>Data Recebimento</th>\n",
+       "      <th>Nome Cliente</th>\n",
+       "      <th>Valor Recebido</th>\n",
+       "      <th>Operação</th>\n",
+       "      <th>venda</th>\n",
+       "      <th>Vendedor</th>\n",
+       "      <th>data_venda</th>\n",
+       "      <th>data_recebimento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [prim_col, NFe, NFCe, Data Venda, Data Recebimento, Nome Cliente, Valor Recebido, Operação, venda, Vendedor, data_venda, data_recebimento]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Função para verificar se o valor é uma string e contém apenas letras, testando se o código da celula anterior funcionou\n",
     "def is_string_with_letters(value):\n",
@@ -382,7 +435,7 @@
     "# Aplicando o filtro para manter apenas as linhas onde o valor da coluna 'venda' é uma string e contém apenas letras\n",
     "filtered_transactions = transactions[transactions['venda'].apply(is_string_with_letters)]\n",
     "\n",
-    "filtered_transactions"
+    "# filtered_transactions"
    ]
   },
   {
@@ -424,6 +477,16 @@
    "source": [
     "# Criar a nova coluna 'data_recebimento' aplicando a função copy_date_or_set_nd\n",
     "transactions['data_recebimento'] = transactions['Data Recebimento'].apply(copy_date_or_set_nd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the \"venda\" variable from object type to integer type\n",
+    "transactions['venda'] = np.int64(transactions['venda'])"
    ]
   }
  ],
