deu certo o código anterior

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -148,11 +148,11 @@
       " 5   Nome Cliente      41643 non-null  object \n",
       " 6   Valor Recebido    46465 non-null  object \n",
       " 7   Operação          46463 non-null  object \n",
-      " 8   venda             46465 non-null  object \n",
+      " 8   venda             46465 non-null  int64  \n",
       " 9   Vendedor          4830 non-null   object \n",
       " 10  data_venda        46465 non-null  object \n",
       " 11  data_recebimento  46465 non-null  object \n",
-      "dtypes: float64(1), object(11)\n",
+      "dtypes: float64(1), int64(1), object(10)\n",
       "memory usage: 4.6+ MB\n"
      ]
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "      <td>NaN</td>\n",
        "      <td>209</td>\n",
        "      <td>1</td>\n",
-       "      <td>981201.0</td>\n",
+       "      <td>981201</td>\n",
        "      <td>JESSICA</td>\n",
        "      <td>30/07/2022 20:02:56</td>\n",
        "      <td>30/07/2022 22:58:00</td>\n",
@@ -289,12 +289,12 @@
        "4       NaN   97  JARRA SANGRIA LOCA SUMMER                    1   \n",
        "5       NaN  406            LULAS EMPANADAS                    1   \n",
        "\n",
-       "      Data Recebimento Nome Cliente       Valor Recebido Operação     venda  \\\n",
-       "1  30/07/2022 22:58:00          NaN                  209        1  981201.0   \n",
-       "2                   49           49  30/07/2022 20:03:12  JESSICA    981201   \n",
-       "3                   15           15  30/07/2022 20:17:28  JESSICA    981201   \n",
-       "4                   55           55  30/07/2022 20:22:20  GABRIEL    981201   \n",
-       "5                   38           38  30/07/2022 21:22:51  JESSICA    981201   \n",
+       "      Data Recebimento Nome Cliente       Valor Recebido Operação   venda  \\\n",
+       "1  30/07/2022 22:58:00          NaN                  209        1  981201   \n",
+       "2                   49           49  30/07/2022 20:03:12  JESSICA  981201   \n",
+       "3                   15           15  30/07/2022 20:17:28  JESSICA  981201   \n",
+       "4                   55           55  30/07/2022 20:22:20  GABRIEL  981201   \n",
+       "5                   38           38  30/07/2022 21:22:51  JESSICA  981201   \n",
        "\n",
        "  Vendedor           data_venda     data_recebimento  \n",
        "1  JESSICA  30/07/2022 20:02:56  30/07/2022 22:58:00  \n",
@@ -304,7 +304,7 @@
        "5      NaN                   nd                   nd  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,13 +481,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert the \"venda\" variable from object type to integer type\n",
     "transactions['venda'] = np.int64(transactions['venda'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
