--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "4        NaN         NaN         NaN         NaN        NaN        NaN  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "9          LOCA   MARCIO  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renomeando várias colunas\n",
+    "transactions = transactions.rename(columns={\n",
+    "    'NFe': 'cod_produto',\n",
+    "    'NFCe': 'produto',\n",
+    "    'Data Venda': 'quantidade',\n",
+    "    'Data Recebimento' : 'valor_unit',\n",
+    "    'Nome Cliente': 'valor_fatu',\n",
+    "    'Valor Recebido': 'hora_lanc',\n",
+    "    'Operação': 'atendente',\n",
+    "    'Vendedor': 'vendedor'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -947,59 +966,159 @@
        "      <td>30/07/2022 20:02:56</td>\n",
        "      <td>30/07/2022 22:58:00</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>111</td>\n",
+       "      <td>AGUA SEM GAS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6,5</td>\n",
+       "      <td>6,5</td>\n",
+       "      <td>30/07/2022 21:30:34</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981101</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>30/07/2022 21:30:34</td>\n",
+       "      <td>30/07/2022 22:23:41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>405</td>\n",
+       "      <td>CRISPY CHICKEN BURGUER</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>30/07/2022 21:37:09</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981001</td>\n",
+       "      <td>MARCIO</td>\n",
+       "      <td>30/07/2022 21:36:52</td>\n",
+       "      <td>30/07/2022 21:37:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>53</td>\n",
+       "      <td>TABUA MEXICANA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>29/07/2022 22:12:29</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>980901</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>29/07/2022 22:12:29</td>\n",
+       "      <td>30/07/2022 00:45:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>84</td>\n",
+       "      <td>BOLINHO ACOSTELADO</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>29/07/2022 22:12:29</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>980901</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>29/07/2022 22:12:29</td>\n",
+       "      <td>30/07/2022 00:45:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>70</td>\n",
+       "      <td>ÁGUA TONICA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>29/07/2022 22:14:25</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>980901</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>29/07/2022 22:12:29</td>\n",
+       "      <td>30/07/2022 00:45:12</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  cod_produto                    produto quantidade valor_unit valor_fatu  \\\n",
-       "2         421  BURRATA COM JAMON E VERDE          1         49         49   \n",
-       "3          41              PORÇAO NACHOS          1         15         15   \n",
-       "4          97  JARRA SANGRIA LOCA SUMMER          1         55         55   \n",
-       "5         406            LULAS EMPANADAS          1         38         38   \n",
-       "6           2       RISOTINHO DE CAMARÃO          1         52         52   \n",
+       "   cod_produto                    produto quantidade valor_unit valor_fatu  \\\n",
+       "2          421  BURRATA COM JAMON E VERDE          1         49         49   \n",
+       "3           41              PORÇAO NACHOS          1         15         15   \n",
+       "4           97  JARRA SANGRIA LOCA SUMMER          1         55         55   \n",
+       "5          406            LULAS EMPANADAS          1         38         38   \n",
+       "6            2       RISOTINHO DE CAMARÃO          1         52         52   \n",
+       "8          111               AGUA SEM GAS          1        6,5        6,5   \n",
+       "10         405     CRISPY CHICKEN BURGUER          1         36         36   \n",
+       "12          53            TABUA MEXICANA           1         42         42   \n",
+       "13          84         BOLINHO ACOSTELADO          1         32         32   \n",
+       "14          70                ÁGUA TONICA          1          8          8   \n",
        "\n",
-       "             hora_lanc atendente   venda vendedor           data_venda  \\\n",
-       "2  30/07/2022 20:03:12   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
-       "3  30/07/2022 20:17:28   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
-       "4  30/07/2022 20:22:20   GABRIEL  981201  JESSICA  30/07/2022 20:02:56   \n",
-       "5  30/07/2022 21:22:51   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
-       "6  30/07/2022 22:26:07   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
+       "              hora_lanc atendente   venda vendedor           data_venda  \\\n",
+       "2   30/07/2022 20:03:12   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
+       "3   30/07/2022 20:17:28   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
+       "4   30/07/2022 20:22:20   GABRIEL  981201  JESSICA  30/07/2022 20:02:56   \n",
+       "5   30/07/2022 21:22:51   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
+       "6   30/07/2022 22:26:07   JESSICA  981201  JESSICA  30/07/2022 20:02:56   \n",
+       "8   30/07/2022 21:30:34   JESSICA  981101  JESSICA  30/07/2022 21:30:34   \n",
+       "10  30/07/2022 21:37:09   JESSICA  981001   MARCIO  30/07/2022 21:36:52   \n",
+       "12  29/07/2022 22:12:29   GABRIEL  980901  GABRIEL  29/07/2022 22:12:29   \n",
+       "13  29/07/2022 22:12:29   GABRIEL  980901  GABRIEL  29/07/2022 22:12:29   \n",
+       "14  29/07/2022 22:14:25   GABRIEL  980901  GABRIEL  29/07/2022 22:12:29   \n",
        "\n",
-       "      data_recebimento  \n",
-       "2  30/07/2022 22:58:00  \n",
-       "3  30/07/2022 22:58:00  \n",
-       "4  30/07/2022 22:58:00  \n",
-       "5  30/07/2022 22:58:00  \n",
-       "6  30/07/2022 22:58:00  "
+       "       data_recebimento  \n",
+       "2   30/07/2022 22:58:00  \n",
+       "3   30/07/2022 22:58:00  \n",
+       "4   30/07/2022 22:58:00  \n",
+       "5   30/07/2022 22:58:00  \n",
+       "6   30/07/2022 22:58:00  \n",
+       "8   30/07/2022 22:23:41  \n",
+       "10  30/07/2022 21:37:14  \n",
+       "12  30/07/2022 00:45:12  \n",
+       "13  30/07/2022 00:45:12  \n",
+       "14  30/07/2022 00:45:12  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transactions.head()"
+    "transactions.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 41635 entries, 2 to 46471\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   cod_produto       41635 non-null  object\n",
+      " 1   produto           41634 non-null  object\n",
+      " 2   quantidade        41635 non-null  object\n",
+      " 3   valor_unit        41635 non-null  object\n",
+      " 4   valor_fatu        41635 non-null  object\n",
+      " 5   hora_lanc         41635 non-null  object\n",
+      " 6   atendente         41633 non-null  object\n",
+      " 7   venda             41635 non-null  int64 \n",
+      " 8   vendedor          41633 non-null  object\n",
+      " 9   data_venda        41635 non-null  object\n",
+      " 10  data_recebimento  41635 non-null  object\n",
+      "dtypes: int64(1), object(10)\n",
+      "memory usage: 3.8+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Renomeando várias colunas\n",
-    "transactions = transactions.rename(columns={\n",
-    "    'NFe': 'cod_produto',\n",
-    "    'NFCe': 'produto',\n",
-    "    'Data Venda': 'quantidade',\n",
-    "    'Data Recebimento' : 'valor_unit',\n",
-    "    'Nome Cliente': 'valor_fatu',\n",
-    "    'Valor Recebido': 'hora_lanc',\n",
-    "    'Operação': 'atendente',\n",
-    "    'Vendedor': 'vendedor'\n",
-    "})"
+    "transactions.info()"
    ]
   }
  ],
