alterei as variaveis de data para o formato date

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -922,199 +922,199 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>46461</th>\n",
-       "      <td>21</td>\n",
-       "      <td>CALDO DO DIA</td>\n",
+       "      <th>2</th>\n",
+       "      <td>421</td>\n",
+       "      <td>BURRATA COM JAMON E VERDE</td>\n",
        "      <td>1</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>02/01/2023 18:54:21</td>\n",
-       "      <td>EMERSON</td>\n",
-       "      <td>1369001</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 17:43:08</td>\n",
-       "      <td>02/01/2023 21:22:35</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2022-07-30 20:03:12</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981201</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>2022-07-30 20:02:56</td>\n",
+       "      <td>2022-07-30 22:58:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46462</th>\n",
-       "      <td>556</td>\n",
-       "      <td>CAIPIROSCA HP</td>\n",
+       "      <th>3</th>\n",
+       "      <td>41</td>\n",
+       "      <td>PORÇAO NACHOS</td>\n",
        "      <td>1</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>02/01/2023 18:58:46</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>1369001</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 17:43:08</td>\n",
-       "      <td>02/01/2023 21:22:35</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2022-07-30 20:17:28</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981201</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>2022-07-30 20:02:56</td>\n",
+       "      <td>2022-07-30 22:58:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46463</th>\n",
-       "      <td>440</td>\n",
-       "      <td>FISH AND CHIPS</td>\n",
+       "      <th>4</th>\n",
+       "      <td>97</td>\n",
+       "      <td>JARRA SANGRIA LOCA SUMMER</td>\n",
        "      <td>1</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>46</td>\n",
-       "      <td>02/01/2023 19:30:07</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>1369001</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 17:43:08</td>\n",
-       "      <td>02/01/2023 21:22:35</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2022-07-30 20:22:20</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>981201</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>2022-07-30 20:02:56</td>\n",
+       "      <td>2022-07-30 22:58:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46464</th>\n",
-       "      <td>86</td>\n",
-       "      <td>COUVERT LOCA</td>\n",
+       "      <th>5</th>\n",
+       "      <td>406</td>\n",
+       "      <td>LULAS EMPANADAS</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>02/01/2023 20:59:31</td>\n",
-       "      <td>MARCOS</td>\n",
-       "      <td>1369001</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 17:43:08</td>\n",
-       "      <td>02/01/2023 21:22:35</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>2022-07-30 21:22:51</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981201</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>2022-07-30 20:02:56</td>\n",
+       "      <td>2022-07-30 22:58:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46465</th>\n",
-       "      <td>86</td>\n",
-       "      <td>COUVERT LOCA</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>RISOTINHO DE CAMARÃO</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>02/01/2023 20:59:31</td>\n",
-       "      <td>MARCOS</td>\n",
-       "      <td>1369001</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 17:43:08</td>\n",
-       "      <td>02/01/2023 21:22:35</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2022-07-30 22:26:07</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981201</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>2022-07-30 20:02:56</td>\n",
+       "      <td>2022-07-30 22:58:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46466</th>\n",
-       "      <td>86</td>\n",
-       "      <td>COUVERT LOCA</td>\n",
+       "      <th>8</th>\n",
+       "      <td>111</td>\n",
+       "      <td>AGUA SEM GAS</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>02/01/2023 20:59:31</td>\n",
-       "      <td>MARCOS</td>\n",
-       "      <td>1369001</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 17:43:08</td>\n",
-       "      <td>02/01/2023 21:22:35</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2022-07-30 21:30:34</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981101</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>2022-07-30 21:30:34</td>\n",
+       "      <td>2022-07-30 22:23:41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46468</th>\n",
-       "      <td>449</td>\n",
-       "      <td>CAIPIRINHA TANGERINA PIME</td>\n",
+       "      <th>10</th>\n",
+       "      <td>405</td>\n",
+       "      <td>CRISPY CHICKEN BURGUER</td>\n",
        "      <td>1</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>02/01/2023 20:00:30</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>1368901</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 20:00:30</td>\n",
-       "      <td>02/01/2023 21:14:14</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2022-07-30 21:37:09</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981001</td>\n",
+       "      <td>MARCIO</td>\n",
+       "      <td>2022-07-30 21:36:52</td>\n",
+       "      <td>2022-07-30 21:37:14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46469</th>\n",
-       "      <td>525</td>\n",
-       "      <td>SODA ITALIANA</td>\n",
+       "      <th>12</th>\n",
+       "      <td>53</td>\n",
+       "      <td>TABUA MEXICANA</td>\n",
        "      <td>1</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>02/01/2023 20:00:30</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>1368901</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 20:00:30</td>\n",
-       "      <td>02/01/2023 21:14:14</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2022-07-29 22:12:29</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>980901</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>2022-07-29 22:12:29</td>\n",
+       "      <td>2022-07-30 00:45:12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46470</th>\n",
-       "      <td>86</td>\n",
-       "      <td>COUVERT LOCA</td>\n",
+       "      <th>13</th>\n",
+       "      <td>84</td>\n",
+       "      <td>BOLINHO ACOSTELADO</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>02/01/2023 20:49:27</td>\n",
-       "      <td>MARCOS</td>\n",
-       "      <td>1368901</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 20:00:30</td>\n",
-       "      <td>02/01/2023 21:14:14</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2022-07-29 22:12:29</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>980901</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>2022-07-29 22:12:29</td>\n",
+       "      <td>2022-07-30 00:45:12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46471</th>\n",
-       "      <td>86</td>\n",
-       "      <td>COUVERT LOCA</td>\n",
+       "      <th>14</th>\n",
+       "      <td>70</td>\n",
+       "      <td>ÁGUA TONICA</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>02/01/2023 20:49:27</td>\n",
-       "      <td>MARCOS</td>\n",
-       "      <td>1368901</td>\n",
-       "      <td>HENRIQUE</td>\n",
-       "      <td>02/01/2023 20:00:30</td>\n",
-       "      <td>02/01/2023 21:14:14</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2022-07-29 22:14:25</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>980901</td>\n",
+       "      <td>GABRIEL</td>\n",
+       "      <td>2022-07-29 22:12:29</td>\n",
+       "      <td>2022-07-30 00:45:12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      cod_produto                    produto  quantidade  valor_unit  \\\n",
-       "46461          21              CALDO DO DIA            1        19.0   \n",
-       "46462         556              CAIPIROSCA HP           1        18.0   \n",
-       "46463         440             FISH AND CHIPS           1        46.0   \n",
-       "46464          86               COUVERT LOCA           1        10.0   \n",
-       "46465          86               COUVERT LOCA           1        10.0   \n",
-       "46466          86               COUVERT LOCA           1        10.0   \n",
-       "46468         449  CAIPIRINHA TANGERINA PIME           1        22.0   \n",
-       "46469         525             SODA ITALIANA            1        16.0   \n",
-       "46470          86               COUVERT LOCA           1        10.0   \n",
-       "46471          86               COUVERT LOCA           1        10.0   \n",
+       "   cod_produto                    produto  quantidade  valor_unit  total_item  \\\n",
+       "2          421  BURRATA COM JAMON E VERDE           1        49.0        49.0   \n",
+       "3           41              PORÇAO NACHOS           1        15.0        15.0   \n",
+       "4           97  JARRA SANGRIA LOCA SUMMER           1        55.0        55.0   \n",
+       "5          406            LULAS EMPANADAS           1        38.0        38.0   \n",
+       "6            2       RISOTINHO DE CAMARÃO           1        52.0        52.0   \n",
+       "8          111               AGUA SEM GAS           1         6.5         6.5   \n",
+       "10         405     CRISPY CHICKEN BURGUER           1        36.0        36.0   \n",
+       "12          53            TABUA MEXICANA            1        42.0        42.0   \n",
+       "13          84         BOLINHO ACOSTELADO           1        32.0        32.0   \n",
+       "14          70                ÁGUA TONICA           1         8.0         8.0   \n",
        "\n",
-       "      total_item            hora_lanc atendente    venda  vendedor  \\\n",
-       "46461         19  02/01/2023 18:54:21   EMERSON  1369001  HENRIQUE   \n",
-       "46462         18  02/01/2023 18:58:46  HENRIQUE  1369001  HENRIQUE   \n",
-       "46463         46  02/01/2023 19:30:07  HENRIQUE  1369001  HENRIQUE   \n",
-       "46464         10  02/01/2023 20:59:31    MARCOS  1369001  HENRIQUE   \n",
-       "46465         10  02/01/2023 20:59:31    MARCOS  1369001  HENRIQUE   \n",
-       "46466         10  02/01/2023 20:59:31    MARCOS  1369001  HENRIQUE   \n",
-       "46468         22  02/01/2023 20:00:30  HENRIQUE  1368901  HENRIQUE   \n",
-       "46469         16  02/01/2023 20:00:30  HENRIQUE  1368901  HENRIQUE   \n",
-       "46470         10  02/01/2023 20:49:27    MARCOS  1368901  HENRIQUE   \n",
-       "46471         10  02/01/2023 20:49:27    MARCOS  1368901  HENRIQUE   \n",
+       "             hora_lanc atendente   venda vendedor          data_venda  \\\n",
+       "2  2022-07-30 20:03:12   JESSICA  981201  JESSICA 2022-07-30 20:02:56   \n",
+       "3  2022-07-30 20:17:28   JESSICA  981201  JESSICA 2022-07-30 20:02:56   \n",
+       "4  2022-07-30 20:22:20   GABRIEL  981201  JESSICA 2022-07-30 20:02:56   \n",
+       "5  2022-07-30 21:22:51   JESSICA  981201  JESSICA 2022-07-30 20:02:56   \n",
+       "6  2022-07-30 22:26:07   JESSICA  981201  JESSICA 2022-07-30 20:02:56   \n",
+       "8  2022-07-30 21:30:34   JESSICA  981101  JESSICA 2022-07-30 21:30:34   \n",
+       "10 2022-07-30 21:37:09   JESSICA  981001   MARCIO 2022-07-30 21:36:52   \n",
+       "12 2022-07-29 22:12:29   GABRIEL  980901  GABRIEL 2022-07-29 22:12:29   \n",
+       "13 2022-07-29 22:12:29   GABRIEL  980901  GABRIEL 2022-07-29 22:12:29   \n",
+       "14 2022-07-29 22:14:25   GABRIEL  980901  GABRIEL 2022-07-29 22:12:29   \n",
        "\n",
-       "                data_venda     data_recebimento  \n",
-       "46461  02/01/2023 17:43:08  02/01/2023 21:22:35  \n",
-       "46462  02/01/2023 17:43:08  02/01/2023 21:22:35  \n",
-       "46463  02/01/2023 17:43:08  02/01/2023 21:22:35  \n",
-       "46464  02/01/2023 17:43:08  02/01/2023 21:22:35  \n",
-       "46465  02/01/2023 17:43:08  02/01/2023 21:22:35  \n",
-       "46466  02/01/2023 17:43:08  02/01/2023 21:22:35  \n",
-       "46468  02/01/2023 20:00:30  02/01/2023 21:14:14  \n",
-       "46469  02/01/2023 20:00:30  02/01/2023 21:14:14  \n",
-       "46470  02/01/2023 20:00:30  02/01/2023 21:14:14  \n",
-       "46471  02/01/2023 20:00:30  02/01/2023 21:14:14  "
+       "      data_recebimento  \n",
+       "2  2022-07-30 22:58:00  \n",
+       "3  2022-07-30 22:58:00  \n",
+       "4  2022-07-30 22:58:00  \n",
+       "5  2022-07-30 22:58:00  \n",
+       "6  2022-07-30 22:58:00  \n",
+       "8  2022-07-30 22:23:41  \n",
+       "10 2022-07-30 21:37:14  \n",
+       "12 2022-07-30 00:45:12  \n",
+       "13 2022-07-30 00:45:12  \n",
+       "14 2022-07-30 00:45:12  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transactions.tail(10)"
+    "transactions.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1124,20 +1124,20 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 41633 entries, 2 to 46471\n",
       "Data columns (total 11 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   cod_produto       41633 non-null  object \n",
-      " 1   produto           41633 non-null  object \n",
-      " 2   quantidade        41633 non-null  int64  \n",
-      " 3   valor_unit        41633 non-null  float64\n",
-      " 4   total_item        41633 non-null  float64\n",
-      " 5   hora_lanc         41633 non-null  object \n",
-      " 6   atendente         41633 non-null  object \n",
-      " 7   venda             41633 non-null  int64  \n",
-      " 8   vendedor          41633 non-null  object \n",
-      " 9   data_venda        41633 non-null  object \n",
-      " 10  data_recebimento  41633 non-null  object \n",
-      "dtypes: float64(2), int64(2), object(7)\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   cod_produto       41633 non-null  object        \n",
+      " 1   produto           41633 non-null  object        \n",
+      " 2   quantidade        41633 non-null  int64         \n",
+      " 3   valor_unit        41633 non-null  float64       \n",
+      " 4   total_item        41633 non-null  float64       \n",
+      " 5   hora_lanc         41633 non-null  datetime64[ns]\n",
+      " 6   atendente         41633 non-null  object        \n",
+      " 7   venda             41633 non-null  int64         \n",
+      " 8   vendedor          41633 non-null  object        \n",
+      " 9   data_venda        41633 non-null  datetime64[ns]\n",
+      " 10  data_recebimento  41633 non-null  datetime64[ns]\n",
+      "dtypes: datetime64[ns](3), float64(2), int64(2), object(4)\n",
       "memory usage: 3.8+ MB\n"
      ]
     }
@@ -1182,10 +1182,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transactions['hora_lanc'] = pd.to_datetime(transactions['hora_lanc'], format='%d/%m/%Y %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions['data_venda'] = pd.to_datetime(transactions['data_venda'], format='%d/%m/%Y %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions['data_recebimento'] = pd.to_datetime(transactions['data_recebimento'], format='%d/%m/%Y %H:%M:%S')"
+   ]
   }
  ],
  "metadata": {
